2008-10-07  Donal K. Fellows  <dkf@users.sf.net>

	* doc/chan.n, doc/transchan.n: Documented the channel transformation
	API of TIP #230.

2008-10-06  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tests/winFCmd.test: Fixed some erroneous tests on Vista+.
	* generic/tclFCmd.c: Fix constness for msvc of last commit

2008-10-06  Joe Mistachkin  <joe@mistachkin.com>

	* tools/man2tcl.c: Added missing line from patch by Harald Oehlmann.
	[Bug 1934200]

2008-10-05  Jan Nijtmans  <nijtmans@users.sf.net>

	* doc/FileSystem.3:     CONSTified Tcl_FSFileAttrStringsProc
	* generic/tclFCmd.c:    and tclpFileAttrStrings. This allows
	* generic/tclIOUtil.c:  FileSystems to report their attributes
	* generic/tclTest.c:    as const strings, without worrying that
	* unix/tclUnixFCmd.c:   Tcl modifies them (which Tcl should not
	* win/tclWinFCmd.c:     do anyway, but the API didn't indicate that)
	* generic/tcl.decls
	* generic/tclDecls.h:   regenerated
	* generic/tcl.h:        make sure that if CONST84 is defined
	                        as empty, CONST86 should be defined
	                        as empty as well (unless overridden).
	This change complies with TIP #27
	*** POTENTIAL INCOMPATIBILITY ***

2008-10-05  Kevin B, Kenny  <kennykb@acm.org>

	* libtommath/bn_mp_sqrt.c (bn_mp_sqrt): Handle the case where
	* tests/expr.test (expr-47.13):         a number's square root
	is between n<<DIGIT_BIT and n<<DIGIT_BIT+1. [Bug 2143288]
	Thanks to Malcolm Boffey (malcolm.boffey@virgin.net) for
	the patch.

	TIP #331 IMPLEMENTATION

	* doc/lset.n:
	* generic/tclListObj.c (TclLsetFlat):
	* tests/lset.test: Modified the [lset] command so that it allows
	for an index of 'end+1', which has the effect of appending an
	element to the list.  
	
2008-10-05  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclInt.decls:  CONSTified the AuxDataType argument
	* generic/tclCompCmds.c: of TclCreateAuxData and
	* generic/tclCompile.c   TclRegisterAuxDataType and the return