@@ -1,3 +1,10 @@
+2008-10-07  Miguel Sofer  <msofer@users.sf.net>
+
+	* generic/tclBasic.c:      Move [tailcall], [coroutine] and 
+	* generic/tclCmdIL.c:      [yield] out of ::tcl::unsupported
+	* tests/info.test:         and into global scope: TIPs #327
+	* tests/unsupported.test:  and #328
+
 2008-10-07  Donal K. Fellows  <dkf@users.sf.net>
 
 	* doc/chan.n, doc/transchan.n: Documented the channel transformation
